[gd_scene load_steps=9 format=3 uid="uid://i001x1ob48oq"]

[ext_resource type="Script" uid="uid://5o5tyt3njhv5" path="res://scripts/rooms/room_base.gd" id="1_k3jq5"]
[ext_resource type="Texture2D" uid="uid://dkjgv2gx4odvd" path="res://assets/textures/Cobbled_floor.png" id="2_mfgdg"]
[ext_resource type="Shader" uid="uid://nuyokq2ngvjx" path="res://shaders/materials/rock.gdshader" id="3_t4afj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5pr5m"]
albedo_color = Color(0.06356, 0.0126, 0.14, 1)
albedo_texture = ExtResource("2_mfgdg")

[sub_resource type="BoxShape3D" id="BoxShape3D_c8or3"]
size = Vector3(25, 25, 37.5)

[sub_resource type="NavigationMesh" id="NavigationMesh_k3jq5"]
vertices = PackedVector3Array(-1.25, 0.4, -25.75, -1.25, 0.4, -23.25, 1.25, 0.4, -23.25, 1.25, 0.4, -25.75, -12.25, 4.4, 19, 12.25, 4.4, 19, 12.25, 4.4, 18.5, -12.25, 4.4, 18.25, -12.75, 4.4, 18.5, -12.75, 4.4, -18.5, -12.25, 4.4, -18.25, -12.25, 4.4, -19, 12.25, 4.4, -18.5, 12.25, 4.4, -19, 12.25, 0.4, 18, 12.25, 0.4, 13, 11.75, 0.4, 12.75, -11.5, 0.4, 18, 11.75, 0.4, -12.5, 12.25, 0.4, -12.75, 12.25, 0.4, -17.75, -11.5, 0.4, -17.75, 12.25, 4.4, 12.25, 12.75, 4.4, 12.25, 13, 4.4, 1.5, 12.75, 4.4, -12.25, 12.25, 4.4, -12.25, -1.25, 0.4, 23.25, -1.25, 0.4, 25.75, 1.25, 0.4, 25.75, 1.25, 0.4, 23.25)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1), PackedInt32Array(8, 7, 4), PackedInt32Array(4, 7, 6), PackedInt32Array(4, 6, 5), PackedInt32Array(10, 7, 9), PackedInt32Array(9, 7, 8), PackedInt32Array(9, 11, 10), PackedInt32Array(10, 11, 12), PackedInt32Array(12, 11, 13), PackedInt32Array(15, 14, 16), PackedInt32Array(16, 14, 17), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 21), PackedInt32Array(18, 16, 21), PackedInt32Array(21, 16, 17), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 25), PackedInt32Array(25, 22, 26), PackedInt32Array(30, 29, 27), PackedInt32Array(27, 29, 28)]
agent_radius = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jk031"]
render_priority = 0
shader = ExtResource("3_t4afj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t4afj"]
albedo_color = Color(0.21616, 0.1736, 0.28, 1)

[node name="Room_base" type="Node3D" groups=["Room"]]
script = ExtResource("1_k3jq5")

[node name="Ceiling" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
visible = false
size = Vector3(25, 0.1, 25)
material = SubResource("StandardMaterial3D_5pr5m")

[node name="Camera_pos" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 3.09086e-08, -3.09086e-08, 100, 100, 0)

[node name="Camera_zone" type="Area3D" parent="Camera_pos" groups=["Camera_zone"]]
transform = Transform3D(1, 2.1316282e-14, -2.1316282e-14, 0, 1, -9.553416e-16, 0, -9.553416e-16, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera_pos/Camera_zone"]
transform = Transform3D(-4.37114e-08, 0, -1, -0.707107, 0.707107, 3.0908602e-08, 0.707107, 0.707107, -3.0908602e-08, 4.3711316e-06, 0, -141.42133)
shape = SubResource("BoxShape3D_c8or3")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_k3jq5")

[node name="Ground" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
use_collision = true
collision_layer = 129
size = Vector3(25, 0.1, 37.5)
material = SubResource("ShaderMaterial_jk031")

[node name="Wall_left" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 2, 18.75)
use_collision = true
size = Vector3(11, 4, 1)
material = SubResource("ShaderMaterial_jk031")

[node name="Wall_left2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 2, 18.75)
use_collision = true
size = Vector3(11, 4, 1)
material = SubResource("ShaderMaterial_jk031")

[node name="Door_left" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 18.75)
use_collision = true
size = Vector3(3, 4, 1)
material = SubResource("ShaderMaterial_jk031")

[node name="Wall_right" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 2, -18.75)
use_collision = true
size = Vector3(11, 4, 1)
material = SubResource("ShaderMaterial_jk031")

[node name="Wall_right2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 2, -18.75)
use_collision = true
size = Vector3(11, 4, 1)
material = SubResource("ShaderMaterial_jk031")

[node name="Door_right" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -18.75)
use_collision = true
size = Vector3(3, 4, 1)
material = SubResource("ShaderMaterial_jk031")

[node name="Wall_up" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5, 2, 10.05)
use_collision = true
size = Vector3(1, 4, 17.25)
material = SubResource("ShaderMaterial_jk031")

[node name="Wall_up2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5, 2, -10.005)
use_collision = true
size = Vector3(1, 4, 17.25)
material = SubResource("ShaderMaterial_jk031")

[node name="Door_up" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5, 2, 0)
use_collision = true
size = Vector3(1, 4, 3)
material = SubResource("ShaderMaterial_jk031")

[node name="Wall_down" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 2, 10.05)
visible = false
use_collision = true
size = Vector3(1, 4, 17.25)
material = SubResource("ShaderMaterial_jk031")

[node name="Wall_down2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 2, -10.05)
visible = false
use_collision = true
size = Vector3(1, 4, 17.25)
material = SubResource("ShaderMaterial_jk031")

[node name="Door_down" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 2, 0)
visible = false
use_collision = true
size = Vector3(1, 4, 3)
material = SubResource("ShaderMaterial_jk031")

[node name="Doormat_down" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)
visible = false
use_collision = true
size = Vector3(3, 0.1, 3)
material = SubResource("StandardMaterial3D_t4afj")

[node name="Doormat_left" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 18.25)
visible = false
use_collision = true
size = Vector3(3, 0.1, 3)
material = SubResource("StandardMaterial3D_t4afj")

[node name="Doormat_up" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)
visible = false
use_collision = true
size = Vector3(3, 0.1, 3)
material = SubResource("StandardMaterial3D_t4afj")

[node name="Doormat_right" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18.25)
visible = false
use_collision = true
size = Vector3(3, 0.1, 3)
material = SubResource("StandardMaterial3D_t4afj")

[node name="EnemySpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 4)
